--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,42 @@
+:root {
+    --main-bg-color: #2c3e50;
+    --main-font-color: white;
+    --main-button-color: #16a085;
+    --hover-button-color: #1abc9c;
+}
+
 body {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    display: flex
-    ;
+    display: flex;
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #2c3e50;
-    color: white;
+    background-color: var(--main-bg-color);
+    color: var(--main-font-color);
 }
+
+a {
+    font-size: smaller;
+    font-family: 'Roboto', sans-serif;
+    opacity: 0.5;
+    color: var(--main-font-color);
+}
+
+a:visited, a:hover {
+    opacity: 0.5;
+    color: var(--main-font-color);
+}
+
+a:hover {
+    opacity: 1;
+    transition: 0.5s ease-out;
+}
+
 .header {
     position: relative;
     top: -5px;
-    /* 使标题栏与顶部有一点间距 */
     z-index: 1000;
     width: 100%;
     text-align: center;
@@ -23,12 +46,9 @@ body {
 
 h1 {
     font-size: 2.5rem;
-    color: white;
-    /* 确保标题颜色和背景协调 */
+    color: var(--main-font-color);
 }
 
-/* 为 id 为 file 的 input 元素添加样式 */
-/* 为 id 为 file 的 input 元素添加样式 */
 #file {
     opacity: 0;
     color: #333;
@@ -37,31 +57,28 @@ h1 {
 }
 
 .footer {
+    color: var(--main-font-color);
     opacity: 0.5;
     text-align: center;
     padding: 10px;
-    margin-top: 10px; /* Add margin-top to create space between content and footer */
+    margin-top: 10px;
     position: relative;
     bottom: 0;
 }
 
 .container {
     width: 90%;
-    /* 限制容器宽度 */
     max-width: 1000px;
-    /* 调整最大宽度 */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
-    /* 增加元素之间的间距 */
 }
 
 .box {
     width: 100%;
     max-width: 400px;
-    /* 限制每个box的最大宽度 */
     margin: 20px 0;
     padding: 20px;
     background-color: #34495e;
@@ -75,18 +92,20 @@ h1 {
     margin-bottom: 10px;
     font-size: 1.2rem;
 }
-
+textarea {
+    white-space: nowrap;
+    overflow-x: auto;
+}
 .box textarea {
     width: 100%;
     height: 150px;
-    background-color: #2c3e50;
+    background-color: var(--main-bg-color);
     border: none;
     border-radius: 4px;
-    color: white;
+    color: var(--main-font-color);
     padding: 10px;
     resize: none;
     box-sizing: border-box;
-    /* 包含padding和border在内宽度 */
 }
 
 .buttons {
@@ -97,48 +116,29 @@ h1 {
     width: 100%;
     max-width: 80px;
     gap: 10px;
-    /* 增加按钮之间的间距 */
     margin-top: 20px;
 }
 
-.buttons button {
+.buttons button, #uploadForm button {
     width: 100%;
     padding: 10px;
-    background-color: #16a085;
-    color: white;
+    background-color: var(--main-button-color);
+    color: var(--main-font-color);
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-.buttons button:hover {
-    background-color: #1abc9c;
+.buttons button:hover, #uploadForm button:hover {
+    background-color: var(--hover-button-color);
 }
 
-#uploadForm button {
-    width: 100%;
-    padding: 10px;
-    background-color: #16a085;
-    /* 与其他按钮使用相同的背景颜色 */
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-#uploadForm button:hover {
-    background-color: #1abc9c;
-    /* 与其他按钮使用相同的悬停效果 */
-}
-
-
-/* 竖屏时调整布局 */
 @media (max-width: 768px) {
-    body{
+    body {
         overflow: over;
     }
+
     .container {
         flex-direction: column;
         align-items: center;
@@ -161,22 +161,29 @@ h1 {
     .buttons button {
         width: 48%;
     }
-    .box2{
+
+    .box2 {
         height: 100px;
+    }
+    textarea::-webkit-scrollbar{
+        width: 24px;
+        background-color: #383838;
+    }
+    textarea::-webkit-scrollbar-thumb{
+        width: 24px;
+        background-color: #818181;
     }
 }
 
-/* 横屏时调整布局 */
 @media (min-width: 768px) {
-    body{
+    body {
         overflow: hidden;
     }
+
     .container {
         flex-direction: row;
         align-items: flex-start;
-        /* 调整对齐方式 */
         gap: 20px;
-        /* 增加容器中元素之间的间距 */
     }
 
     .box {
@@ -188,7 +195,20 @@ h1 {
         flex-direction: column;
         margin-top: 0;
     }
-    .footer{
+
+    .footer {
         position: absolute;
+    }
+    textarea {
+    white-space: nowrap;
+    overflow-x: auto;
+}
+    textarea::-webkit-scrollbar{
+        width: 12px;
+        background-color: #383838;
+    }
+    textarea::-webkit-scrollbar-thumb{
+        width: 12px;
+        background-color: #818181;
     }
 }
